[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepdiff>=8.5.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "shooju>=3.8.15",
]
